--- a/.envExample
+++ b/.envExample
@@ -1,3 +1,4 @@
 TOKEN = YOUR TOKEN
 PREFIX =  YOUR PREFIX
 YOUTUBE_API_KEY = YOUR YOUTUBE_API_KEY
+PROJECT_DOMAIN = YOUR GLITCH DOMAIN IF YOU USING ONE OTHERWISE JUST DELETE SERVER.JS
