--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "express-glitch-keepalive": "^0.2.0",
     "fs": "0.0.1-security",
     "genius-lyrics": "^2.0.1",
+    "http": "0.0.1-security",
     "math-expression-evaluator": "^1.2.22",
     "moment": "^2.25.3",
+    "node-keepalive": "0.0.1",
     "path": "^0.12.7",
     "simple-youtube-api": "^5.2.1",
     "ytdl-core": "^2.1.2",
