--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "13.x"
+    "node": "13.11.0"
   },
   "author": "Niphra",
   "license": "ISC",
