--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "13.11.0"
+    "node": "13.11.0",
+	"npm": "6.13.7"
   },
   "author": "Niphra",
   "license": "ISC",
