--- a/package.json
+++ b/package.json
@@ -7,30 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "engines": {
-    "node": "13.11.0",
-    "npm": "6.13.7"
-  },
   "author": "Niphra",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.2",
-    "canvas": "^2.6.1",
-    "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-glitch-keepalive": "^0.2.0",
-    "fs": "0.0.1-security",
-    "genius-lyrics": "^2.0.1",
-    "http": "0.0.1-security",
-    "math-expression-evaluator": "^1.2.22",
-    "moment": "^2.27.0",
-    "node-keepalive": "0.0.1",
+    "@discordjs/builders": "^0.11.0",
+    "@discordjs/rest": "^0.2.0-canary.0",
+    "@discordjs/voice": "^0.7.5",
+    "canvas": "^2.9.0",
+    "discord-api-types": "^0.26.1",
+    "discord.js": "^13.6.0",
+    "dotenv": "^14.2.0",
+    "fs": "^0.0.1-security",
+    "math-expression-evaluator": "^1.3.8",
+    "moment": "^2.29.1",
     "path": "^0.12.7",
-    "simple-youtube-api": "^5.2.1",
     "snekfetch": "^4.0.4",
-    "sqlite": "^2.8.0",
-    "ytdl-core": "^2.1.2",
-    "ytdl-core-discord": "^1.2.0"
+    "sqlite": "^4.0.23"
   }
 }
