--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
+    "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.2.0-canary.0",
     "@discordjs/voice": "^0.7.5",
     "canvas": "^2.9.0",
     "discord-api-types": "^0.26.1",
+    "discord-player": "^5.2.2",
+    "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.6.0",
     "dotenv": "^14.2.0",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^4.4.1",
     "fs": "^0.0.1-security",
     "math-expression-evaluator": "^1.3.8",
     "moment": "^2.29.1",
