--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "ffmpeg-static": "^4.4.1",
     "fs": "^0.0.1-security",
     "math-expression-evaluator": "^1.3.8",
-    "moment": "^2.29.2",
+    "node-fetch": "^2.6.7",
     "path": "^0.12.7",
-    "snekfetch": "^4.0.4",
     "sqlite": "^4.0.23"
   }
 }
