--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "discordniphrabotv12",
+  "name": "NiphraBOT",
   "version": "1.0.0",
-  "description": "",
+  "description": "Discord bot for our server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,10 +14,8 @@
     "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.2.0-canary.0",
     "@discordjs/voice": "^0.7.5",
-    "canvas": "^2.9.0",
     "discord-api-types": "^0.26.1",
     "discord-player": "^5.2.2",
-    "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.6.0",
     "dotenv": "^14.2.0",
     "ffmpeg": "^0.0.4",
@@ -25,7 +23,6 @@
     "fs": "^0.0.1-security",
     "math-expression-evaluator": "^1.3.8",
     "node-fetch": "^2.6.7",
-    "path": "^0.12.7",
-    "sqlite": "^4.0.23"
+    "path": "^0.12.7"
   }
 }
