--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ffmpeg-static": "^4.4.1",
     "fs": "^0.0.1-security",
     "math-expression-evaluator": "^1.3.8",
+    "mongodb": "^4.6.0",
     "node-fetch": "^2.6.7",
     "path": "^0.12.7"
   }
