--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.8.0",
     "dotenv": "^14.2.0",
+    "express": "^4.18.1",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.4.1",
     "math-expression-evaluator": "^1.3.8",
