--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "author": "Niphra",
   "license": "ISC",
+  "engines": {
+    "node": "16.13.2",
+    "npm": "8.1.2"
+  },
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/opus": "^0.5.3",
