--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.2.0-canary.0",
     "@discordjs/voice": "^0.7.5",
+    "canvas": "^2.9.3",
     "discord-api-types": "^0.26.1",
+    "discord-buttons": "^4.0.0-deprecated",
     "discord-player": "^5.2.2",
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.8.0",
