--- a/package.json
+++ b/package.json
@@ -14,17 +14,15 @@
     "npm": "8.1.2"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.11.0",
     "@discordjs/opus": "^0.8.0",
-    "@discordjs/rest": "^0.2.0-canary.0",
-    "@discordjs/voice": "^0.7.5",
+    "@discordjs/voice": "^0.11.0",
     "canvas": "^2.9.3",
-    "discord-api-types": "^0.26.1",
     "discord-player": "^5.3.1",
     "discord-ytdl-core": "^5.0.4",
-    "discord.js": "^13.8.0",
+    "discord.js": "^14.2.0",
     "dotenv": "^14.2.0",
     "express": "^4.18.1",
+    "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.4.1",
     "math-expression-evaluator": "^1.3.8",
     "mongodb": "^4.6.0",
