--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "NiphraBOT",
-  "version": "1.0.0",
-  "description": "Discord bot for our server",
+  "name": "niphrabot-v14.1",
+  "version": "14.1.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start:dev": "nodemon index.js"
   },
-  "author": "Niphra",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "engines": {
-    "node": "16.13.2",
-    "npm": "8.1.2"
-  },
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
-    "@discordjs/voice": "^0.11.0",
-    "canvas": "^2.9.3",
-    "discord-player": "^5.3.1",
-    "discord-ytdl-core": "^5.0.4",
-    "discord.js": "^14.2.0",
-    "dotenv": "^14.2.0",
-    "express": "^4.18.1",
+    "@discord-player/extractor": "^4.4.0",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/rest": "^1.5.0",
+    "canvas": "^2.11.2",
+    "discord-player": "^6.6.1",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
     "ffmpeg": "^0.0.4",
-    "ffmpeg-static": "^4.4.1",
     "math-expression-evaluator": "^1.3.8",
-    "mongodb": "^4.6.0",
-    "node-fetch": "^2.6.7",
-    "path": "^0.12.7"
+    "mongodb": "^5.7.0",
+    "node-fetch": "^2.6.12",
+    "pm2": "^5.3.0",
+    "ytdl-core": "^4.11.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
