--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^5.7.0",
     "node-fetch": "^2.6.12",
     "pm2": "^5.3.0",
+    "winston": "^3.11.0",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
