--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
 {
-  "name": "niphrabot-v14.1",
-  "version": "14.1.0",
-  "description": "",
+  "name": "niphrabotv14.5",
+  "version": "14.5.0",
+  "description": "My discord bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "Niphra",
   "license": "ISC",
   "dependencies": {
-    "@discord-player/extractor": "^4.4.7",
+    "@discord-player/extractor": "^4.5.1",
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/rest": "^1.5.0",
+    "@discordjs/rest": "^2.3.0",
     "canvas": "^2.11.2",
-    "discord-player": "^6.6.10",
-    "discord.js": "^14.13.0",
-    "dotenv": "^16.0.3",
-    "ffmpeg": "^0.0.4",
-    "math-expression-evaluator": "^1.3.8",
-    "mongodb": "^5.7.0",
-    "node-fetch": "^2.6.12",
-    "pm2": "^5.3.0",
-    "winston": "^3.11.0",
-    "ytdl-core": "^4.11.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "discord-player": "^6.7.1",
+    "discord-player-youtubei": "^1.3.1",
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
+    "math-expression-evaluator": "^2.0.5",
+    "mongodb": "^6.8.0",
+    "node-fetch": "^2.7.0",
+    "nodemon": "^3.1.4",
+    "youtube-ext": "^1.1.25"
   }
 }
