--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@discordjs/rest": "^2.3.0",
     "canvas": "^2.11.2",
     "discord-player": "^6.7.1",
-    "discord-player-youtubei": "^1.3.1",
+    "discord-player-youtubei": "^1.3.2",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "math-expression-evaluator": "^2.0.5",
     "mongodb": "^6.8.0",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.4",
-    "youtube-ext": "^1.1.25"
+    "ytdl-core": "^4.11.5"
   }
 }
